--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@
                                         </span>
                                         <br>
                                     </div>
-
                                     <div class="d-grid gap-2 col-6 mx-auto">
                                         <button class="btn btn-primary  " id='firstSubmit'
                                             onclick='validateFirstStep()'>
@@ -120,7 +119,7 @@
                                     <div id='hidebutton1' class="d-grid gap-2  col-6 mx-auto">
                                         <button class="btn disabled btn-success" id='firstStepComplete' type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapseTwo"
-                                            onclick='runReport(15)' aria-expanded="flase"
+                                            onclick='first_step_report()' aria-expanded="false"
                                             aria-controls="collapseTwo">NEXT
                                             STEP</button>
                                     </div>
@@ -152,8 +151,9 @@
                                     Below we've selected the default baseline period. If you wish to use different
                                     Dates, please specify in the date inserts below:</p>
                                 <div class="alert text-center alert-danger" id="baselineDates" role="alert">
-                                    <strong> NO OUTAGE DATES HAVE BEEN SELECTED</strong>
-
+                                    <div class="spinner-border" role="status">
+                                        <span class="sr-only"></span>
+                                    </div>
                                 </div>
                                 <p>If the above dates are insufficient, please click below, and want to choose new
                                     dates. click below</p>
@@ -169,8 +169,6 @@
 
                                         <label for="baselineEndDate" class="form-label">Baseline End Date</label>
                                         <input type="date" class="form-control " id="baselineEndDate" required>
-
-
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="baselineChoice"
                                                 id="chooseSuggestedBaseline" checked>
@@ -188,7 +186,6 @@
                                     </div>
                                     <hr>
                                 </div>
-
                                 <div class="row justify-content-center">
                                     <h5>Select Commission Option</h5>
                                     <div class="col-5 ">
@@ -201,7 +198,6 @@
                                             Affiliate's current
                                             commission rate to the report.</p>
                                     </div>
-
                                     <div class="col-5 ">
                                         <p>Upload list of active affiliates from the Active Affiliates tab found on the
                                             homepage. This will set the correct
@@ -229,7 +225,7 @@
                                                     aria-label="Radio button for following text input">
                                             </div>
                                             <input class="form-inline alert-danger" type="file"
-                                                onchange='readFile(this)' id="affiliateFormFile">
+                                                onchange='read_file(this)' id="affiliateFormFile">
                                         </div>
                                     </div><br>
                                     <hr>
@@ -254,15 +250,12 @@
                                     <div id='hidebutton1' class="d-grid gap-2  col-6 mx-auto">
                                         <button class="btn disabled btn-success" id='SecondStepComplete' type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapseThree"
-                                            onclick='runReport(1)' aria-expanded="false"
+                                            onclick='second_report(1)' aria-expanded="false"
                                             aria-controls="collapseThree">BUILD TABLES</button>
                                     </div>
-
                                 </div>
-
                             </div>
                         </div>
-
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingThree">
@@ -345,8 +338,6 @@
             </div>
         </div>
     </div>
-
-
     <!-- SCRIPTS! -->
     <script>
         // Global Variables
@@ -363,55 +354,19 @@
         var merchant = { affiliate_count: 20 };
         var secondButtonBoolean = false;
 
-        function hide(arr) {
-            //Reveals a hidden HTML element.
-            console.log(arr)
-            arr.forEach(id => {
-                let element = document.getElementById(id);
-                element.hidden = true
-            })
-        };
-        function unhide(arr) {
-            //Reveals a hidden HTML element.
-            arr.forEach(id => {
-                let element = document.getElementById(id);
-                if (element.hidden) {
-                    element.removeAttribute('hidden');
-                };
-            });
-        };
-        function password_check() {
-            API_KEY = document.getElementById('password_input').value
-            switch (API_KEY.length) {
-                case 32:
-                    window.localStorage.setItem('test', API_KEY);
-                    unhide(['post_password_display']);
-                    hide(['title']);
-                    document.getElementById('first_display').remove();
-                    break
-                default:
-                    alert("NOPE")
-                    break
-            };
-        };
-        function use_local_storage() {
-            let x = window.localStorage.test;
-            document.getElementById('password_input').value = x;
-            console.log(x);
-        };
     </script>
     <script src="assets/app.js"></script>
     <script src="assets/test_functions.js"></script>
     <script src="assets/API_reports.js"></script>
     <script src="assets/report_step_2.js"></script>
+    <script src="assets/read_file.js"></script>
+    <script src="assets/validation_scripts.js"></script>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-
     <!-- Option 2: Separate Popper and Bootstrap JS -->
-
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script>
