--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link rel="icon" type=".gif" href="assets/markbounce.gif">
+    <link rel="icon" type=".gif" href="style/markbounce.gif">
     <title>AvantLink Outage-Estimate</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style/style.css" />
 </head>
 
 <body>
@@ -250,7 +250,7 @@
                                     <div id='hidebutton1' class="d-grid gap-2  col-6 mx-auto">
                                         <button class="btn disabled btn-success" id='SecondStepComplete' type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapseThree"
-                                            onclick='second_report(1)' aria-expanded="false"
+                                            onclick='second_report()' aria-expanded="false"
                                             aria-controls="collapseThree">BUILD TABLES</button>
                                     </div>
                                 </div>
@@ -361,6 +361,8 @@
     <script src="assets/report_step_2.js"></script>
     <script src="assets/read_file.js"></script>
     <script src="assets/validation_scripts.js"></script>
+    <script src="assets/build_tables.js"></script>
+
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
