fixing displays, making the final file look better

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
     <link rel="icon" type=".gif" href="style/markbounce.gif">
     <title>AvantLink Outage-Estimate</title>
     <link rel="stylesheet" type="text/css" media="screen" href="style/style.css" />
@@ -25,7 +24,7 @@
     <div class='container-fluid d-flex flex-column min-vh-100 justify-content-center align-items-center'
         id='first_display'>
         <div class="row">
-            <div class="card">
+            <div class="card shadow p-3 mb-5 bg-white rounded">
                 <div class="card-body">
                     <label for="password_input" class="form-label">Your API key</label>
                     <input type="password" id="password_input" class="form-control"
@@ -40,8 +39,9 @@
     </div>
     <div class='container' hidden id="post_password_display">
         <div class="row">
-            <div class="col">
-                <div class="accordion" id="accordionExample">
+            <div class="col ">
+                <br>
+                <div class="accordion shadow p-3 mb-5 bg-white rounded" id="accordionExample">
                     <div class="accordion-item ">
                         <h2 class="accordion-header " id="headingOne">
                             <button class="accordion-button " type="button" data-bs-toggle="collapse"
@@ -267,11 +267,10 @@
                         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <div class=container>
-                                    <div class=row>
-                                        <div class=col>
-                                            <table id='merchantTable'
-                                                class="table table-bordered border-primary centered table-sm">
+                                <div class="container" id="report_pdf">
+                                    <div class="row align-top">
+                                        <div class="col">
+                                            <table id='merchantTable' class="table  centered table-sm">
                                                 <tbody></tbody>
                                             </table>
                                             <p class='reportFont'>Compares the outage period with a statistically
@@ -287,26 +286,24 @@
                                                 <li class="list-group-item"><strong>Reports Used for this
                                                         Estimate</strong>
                                                 </li>
-                                                <li id='outageFileName' class="list-group-item">outage filename</li>
-                                                <li id='baselineFileName' class="list-group-item">baseline filename</li>
-                                                <li id='affiliateReportFileName' class="list-group-item">affiliate
-                                                    report
+                                                <li id='outageFileName' class="list-group-item">performance summary by
+                                                    Affiliate</li>
+                                                <li id='baselineFileName' class="list-group-item">performance summary
+                                                </li>
+                                                <li id='affiliateReportFileName' class="list-group-item">
                                                 </li>
                                             </ul>
                                             <br>
                                         </div>
-                                        <div class=col style="font-size: small;">
-                                            <table id='baselineTable'
-                                                class="table baseData table-bordered border-primary table-sm">
-                                                <tbody> </tbody>
-                                            </table>
+                                        <div class="col" style="font-size: small;">
+
                                             <table id='outageTable'
-                                                class="table table-sm table-bordered border-primary baseData table-sm">
+                                                class="table table-sm table-bordered border-primary baseData">
                                                 <tbody> </tbody>
                                             </table>
                                         </div>
                                         <hr>
-                                        <div class=col-12 id="affiliateTable">
+                                        <div class="col-12" id="affiliateTable">
                                             <h6> Break down of Affiliates with most clicks during the outage.</h6>
                                             <table style="font-size:x-small; font-weight: bold; text-align:right"
                                                 class="table  align-middle table-bordered table-sm  border-primary"
@@ -314,30 +311,34 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <div class="row justify-content-md-center ">
+                                    <div class="col">
+                                        <button class="btn btn-lg btn-primary " type="button" id='makePDF'
+                                            onclick='generatePDF()'>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="bi bi-file-pdf-fill" viewBox="0 0 16 16">
+                                                <path
+                                                    d="M5.523 10.424c.14-.082.293-.162.459-.238a7.878 7.878 0 0 1-.45.606c-.28.337-.498.516-.635.572a.266.266 0 0 1-.035.012.282.282 0 0 1-.026-.044c-.056-.11-.054-.216.04-.36.106-.165.319-.354.647-.548zm2.455-1.647c-.119.025-.237.05-.356.078a21.035 21.035 0 0 0 .5-1.05 11.96 11.96 0 0 0 .51.858c-.217.032-.436.07-.654.114zm2.525.939a3.888 3.888 0 0 1-.435-.41c.228.005.434.022.612.054.317.057.466.147.518.209a.095.095 0 0 1 .026.064.436.436 0 0 1-.06.2.307.307 0 0 1-.094.124.107.107 0 0 1-.069.015c-.09-.003-.258-.066-.498-.256zM8.278 4.97c-.04.244-.108.524-.2.829a4.86 4.86 0 0 1-.089-.346c-.076-.353-.087-.63-.046-.822.038-.177.11-.248.196-.283a.517.517 0 0 1 .145-.04c.013.03.028.092.032.198.005.122-.007.277-.038.465z" />
+                                                <path fill-rule="evenodd"
+                                                    d="M4 0h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2zm.165 11.668c.09.18.23.343.438.419.207.075.412.04.58-.03.318-.13.635-.436.926-.786.333-.401.683-.927 1.021-1.51a11.64 11.64 0 0 1 1.997-.406c.3.383.61.713.91.95.28.22.603.403.934.417a.856.856 0 0 0 .51-.138c.155-.101.27-.247.354-.416.09-.181.145-.37.138-.563a.844.844 0 0 0-.2-.518c-.226-.27-.596-.4-.96-.465a5.76 5.76 0 0 0-1.335-.05 10.954 10.954 0 0 1-.98-1.686c.25-.66.437-1.284.52-1.794.036-.218.055-.426.048-.614a1.238 1.238 0 0 0-.127-.538.7.7 0 0 0-.477-.365c-.202-.043-.41 0-.601.077-.377.15-.576.47-.651.823-.073.34-.04.736.046 1.136.088.406.238.848.43 1.295a19.707 19.707 0 0 1-1.062 2.227 7.662 7.662 0 0 0-1.482.645c-.37.22-.699.48-.897.787-.21.326-.275.714-.08 1.103z" />
+                                            </svg> - Save This Report as a PDF </button>
+                                        <button class="btn btn-lg btn-primary" type="button" id='makeBatchSalesDoc'
+                                            onclick='buildBatchSales()'>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="bi bi-file-spreadsheet" viewBox="0 0 16 16">
+                                                <path
+                                                    d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v4h10V2a1 1 0 0 0-1-1H4zm9 6h-3v2h3V7zm0 3h-3v2h3v-2zm0 3h-3v2h2a1 1 0 0 0 1-1v-1zm-4 2v-2H6v2h3zm-4 0v-2H3v1a1 1 0 0 0 1 1h1zm-2-3h2v-2H3v2zm0-3h2V7H3v2zm3-2v2h3V7H6zm3 3H6v2h3v-2z" />
+                                            </svg> - Export A Batch Sales Report </button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row d-grid gap-2 d-md-flex justify-content-md-end">
-            <br>
-            <button class="btn collapse btn-primary " type="button" id='makePDF' onclick='generatePDF()'>
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-file-pdf-fill" viewBox="0 0 16 16">
-                    <path
-                        d="M5.523 10.424c.14-.082.293-.162.459-.238a7.878 7.878 0 0 1-.45.606c-.28.337-.498.516-.635.572a.266.266 0 0 1-.035.012.282.282 0 0 1-.026-.044c-.056-.11-.054-.216.04-.36.106-.165.319-.354.647-.548zm2.455-1.647c-.119.025-.237.05-.356.078a21.035 21.035 0 0 0 .5-1.05 11.96 11.96 0 0 0 .51.858c-.217.032-.436.07-.654.114zm2.525.939a3.888 3.888 0 0 1-.435-.41c.228.005.434.022.612.054.317.057.466.147.518.209a.095.095 0 0 1 .026.064.436.436 0 0 1-.06.2.307.307 0 0 1-.094.124.107.107 0 0 1-.069.015c-.09-.003-.258-.066-.498-.256zM8.278 4.97c-.04.244-.108.524-.2.829a4.86 4.86 0 0 1-.089-.346c-.076-.353-.087-.63-.046-.822.038-.177.11-.248.196-.283a.517.517 0 0 1 .145-.04c.013.03.028.092.032.198.005.122-.007.277-.038.465z" />
-                    <path fill-rule="evenodd"
-                        d="M4 0h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2zm.165 11.668c.09.18.23.343.438.419.207.075.412.04.58-.03.318-.13.635-.436.926-.786.333-.401.683-.927 1.021-1.51a11.64 11.64 0 0 1 1.997-.406c.3.383.61.713.91.95.28.22.603.403.934.417a.856.856 0 0 0 .51-.138c.155-.101.27-.247.354-.416.09-.181.145-.37.138-.563a.844.844 0 0 0-.2-.518c-.226-.27-.596-.4-.96-.465a5.76 5.76 0 0 0-1.335-.05 10.954 10.954 0 0 1-.98-1.686c.25-.66.437-1.284.52-1.794.036-.218.055-.426.048-.614a1.238 1.238 0 0 0-.127-.538.7.7 0 0 0-.477-.365c-.202-.043-.41 0-.601.077-.377.15-.576.47-.651.823-.073.34-.04.736.046 1.136.088.406.238.848.43 1.295a19.707 19.707 0 0 1-1.062 2.227 7.662 7.662 0 0 0-1.482.645c-.37.22-.699.48-.897.787-.21.326-.275.714-.08 1.103z" />
-                </svg> - Save as a PDF </button>
-            <button class="btn collapse btn-primary" type="button" id='makeBatchSalesDoc' onclick='buildBatchSales()'>
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-file-spreadsheet" viewBox="0 0 16 16">
-                    <path
-                        d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v4h10V2a1 1 0 0 0-1-1H4zm9 6h-3v2h3V7zm0 3h-3v2h3v-2zm0 3h-3v2h2a1 1 0 0 0 1-1v-1zm-4 2v-2H6v2h3zm-4 0v-2H3v1a1 1 0 0 0 1 1h1zm-2-3h2v-2H3v2zm0-3h2V7H3v2zm3-2v2h3V7H6zm3 3H6v2h3v-2z" />
-                </svg> - Export A Batch Sales Report </button>
-        </div>
+
     </div>
     <!-- SCRIPTS! -->
     <script>
@@ -354,6 +355,7 @@
         var baseline = { value: "baseline", };
         var merchant = { affiliate_count: 20 };
         var secondButtonBoolean = false;
+        var today = ((new Date().getMonth() + 1) + "." + (new Date().getDate()) + '.' + (new Date().getFullYear()))
 
     </script>
     <script src="assets/app.js"></script>
