--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="icon" type=".gif" href="style/markbounce.gif">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&amp;display=swap" rel="stylesheet">
     <title>AvantLink Outage-Estimate</title>
     <link rel="stylesheet" type="text/css" media="screen" href="style/style.css" />
 </head>
@@ -304,7 +307,7 @@
                                 <div class="container" id="report_pdf">
                                     <div class="row align-top">
                                         <div class="col">
-                                            <table id='merchantTable' class="table  centered table-sm">
+                                            <table id='merchantTable' class="table  table-striped centered table-sm">
                                                 <tbody>
                                                     <thead>
                                                         <tr>
@@ -346,7 +349,14 @@
                                                 <li id='affiliateReportFileName' class="list-group-item">
                                                 </li>
                                             </ul> -->
-                                            <table id='totals_table' class="table  centered table-sm">
+                                            <br>
+                                        </div>
+                                        <div class="col" style="font-size: small;">
+                                            <table id='outageTable'
+                                                class="table table-sm table-bordered border-primary baseData">
+                                                <tbody> </tbody>
+                                            </table>
+                                            <table id='totals_table' class="table table-striped">
                                                 <tbody>
                                                     <thead>
                                                         <tr>
@@ -367,14 +377,6 @@
                                                         <td id="r_estimated_total">xx</td>
                                                     </tr>
                                                 </tbody>
-                                            </table>
-                                            <br>
-                                        </div>
-                                        <div class="col" style="font-size: small;">
-
-                                            <table id='outageTable'
-                                                class="table table-sm table-bordered border-primary baseData">
-                                                <tbody> </tbody>
                                             </table>
                                         </div>
                                         <hr>
@@ -414,6 +416,8 @@
             </div>
         </div>
 
+
+
     </div>
     <!-- SCRIPTS! -->
     <script>
@@ -440,6 +444,7 @@
     <script src="assets/read_file.js"></script>
     <script src="assets/validation_scripts.js"></script>
     <script src="assets/build_tables.js"></script>
+    <script src="assets/export_files.js"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
