PDF experiment. minor changes.. End of Day.. I'm burned out

--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
                     <div id="passwordHelpBlock" class="form-text">
 
                         Please enter your required API key to continue and use this project.
-                    </div>
+                    </div><br>
                     <!-- <label for="password_input" class="form-label">Your API key</label> -->
                     <input type="password" id="password_input" class="form-control"
                         aria-describedby="passwordHelpBlock">
-
                     <br>
                     <button type="submit" onclick='password_check()' class="btn btn-block btn-primary">Submit</button>
                 </div>
