--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="accordion shadow p-3 mb-5 bg-white rounded" id="outage-accordian" hidden>
                     <div class="accordion-item ">
                         <h2 class="accordion-header " id="headingOne">
-                            <button class="accordion-button " type="button" data-bs-toggle="collapse"
+                            <button class="accordion-button btn-secondary " type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                 Outage Information <strong> (STEP 1)</strong>
                             </button>
@@ -135,8 +135,9 @@
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingTwo">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapseTwo" aria-expanded="flase" aria-controls="collapseTwo">
+                            <button class="accordion-button btn-secondary collapsed" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="flase"
+                                aria-controls="collapseTwo">
                                 Baseline Information <strong>(STEP 2)</strong>
                             </button>
                         </h2>
@@ -311,8 +312,9 @@
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingThree">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            <button class="accordion-button btn-secondary collapsed" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
+                                aria-controls="collapseThree">
                                 Outage Estimate Report
                             </button>
                         </h2>
